--- a/app/src/main/res/layout/device_list.xml
+++ b/app/src/main/res/layout/device_list.xml
@@ -13,6 +13,7 @@
         android:textColor="#fff"
         android:paddingLeft="5dp"
         />
+
     <ListView android:id="@+id/paired_devices"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -28,15 +29,18 @@
         android:textColor="#fff"
         android:paddingLeft="5dp"
         />
+
     <ListView android:id="@+id/new_devices"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:stackFromBottom="true"
         android:layout_weight="2"
         />
+
     <Button android:id="@+id/button_scan"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="button_scan"
+        android:text="Scan Device"
         />
+
 </LinearLayout>
